--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,11 @@ TO DO
 [ ] - blue-white-red which goes to darker shades
 [ ] - programmatically find suitable range to x-white-y with darker shades
 [ ] - green-white-purple
-[ ] - Flow-chart
-[ ] - Write up
+[ ] - cyan-black-yellow
+[ ] - Swap to colorspace based gamut
+[ ] - Shrink previous colormaps to be in gamut
 [ ] - UPLab
+[ ] - Flow-chart
+[ ] - Name suite. Rename functions. (colorlab? cmaplab?)
+[ ] - Write up
+[ ] - CMYK - ISO Coated v2 300% (ECI)
